[init] queue for run service handling
