# internal/data/storage/resources/create.go
@@ -11,9 +11,9 @@ import (
 func (p *Storage) Create(ctx context.Context, resource domain.Resource) error {
 	_, err := p.db.ExecContext(ctx, `
 		INSERT INTO resources 
-		 	   (resource_full_name, node_name, state)
-		VALUES (                $1,        $2,    $3)`,
-		resource.ResourceName, resource.NodeName, resource.State)
+		 	   (resource_full_name, node_name, state, port)
+		VALUES (                $1,        $2,    $3,   $4)`,
+		resource.ResourceName, resource.NodeName, resource.State, resource.Port)
 	if err != nil {
 		return errors.Wrap(err, "error creating resource")
 	}
