# pkg/perun_api/Perun_api.pb.go
@@ -1,6 +1,6 @@
 // Code generated by protoc-gen-go. DO NOT EDIT.
 // versions:
-// 	protoc-gen-go v1.34.2
+// 	protoc-gen-go v1.33.0
 // 	protoc        v4.25.1
 // source: grpc/Perun_api.proto
 
@@ -136,7 +136,7 @@ type Ssh struct {
 	unknownFields protoimpl.UnknownFields
 
 	KeyBase64 []byte `protobuf:"bytes,1,opt,name=key_base64,json=keyBase64,proto3" json:"key_base64,omitempty"`
-	Addr      string `protobuf:"bytes,2,opt,name=addr,proto3" json:"addr,omitempty"`
+	Port      uint64 `protobuf:"varint,2,opt,name=port,proto3" json:"port,omitempty"`
 	Username  string `protobuf:"bytes,3,opt,name=username,proto3" json:"username,omitempty"`
 }
 
@@ -179,11 +179,11 @@ func (x *Ssh) GetKeyBase64() []byte {
 	return nil
 }
 
-func (x *Ssh) GetAddr() string {
+func (x *Ssh) GetPort() uint64 {
 	if x != nil {
-		return x.Addr
+		return x.Port
 	}
-	return ""
+	return 0
 }
 
 func (x *Ssh) GetUsername() string {
@@ -770,7 +770,7 @@ var file_grpc_Perun_api_proto_rawDesc = []byte{
 	0x73, 0x61, 0x62, 0x6c, 0x65, 0x64, 0x22, 0x54, 0x0a, 0x03, 0x53, 0x73, 0x68, 0x12, 0x1d, 0x0a,
 	0x0a, 0x6b, 0x65, 0x79, 0x5f, 0x62, 0x61, 0x73, 0x65, 0x36, 0x34, 0x18, 0x01, 0x20, 0x01, 0x28,
 	0x0c, 0x52, 0x09, 0x6b, 0x65, 0x79, 0x42, 0x61, 0x73, 0x65, 0x36, 0x34, 0x12, 0x12, 0x0a, 0x04,
-	0x61, 0x64, 0x64, 0x72, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x61, 0x64, 0x64, 0x72,
+	0x70, 0x6f, 0x72, 0x74, 0x18, 0x02, 0x20, 0x01, 0x28, 0x04, 0x52, 0x04, 0x70, 0x6f, 0x72, 0x74,
 	0x12, 0x1a, 0x0a, 0x08, 0x75, 0x73, 0x65, 0x72, 0x6e, 0x61, 0x6d, 0x65, 0x18, 0x03, 0x20, 0x01,
 	0x28, 0x09, 0x52, 0x08, 0x75, 0x73, 0x65, 0x72, 0x6e, 0x61, 0x6d, 0x65, 0x22, 0x6c, 0x0a, 0x0c,
 	0x43, 0x6f, 0x6e, 0x6e, 0x65, 0x63, 0x74, 0x56, 0x65, 0x6c, 0x65, 0x7a, 0x1a, 0x50, 0x0a, 0x07,
@@ -846,7 +846,7 @@ func file_grpc_Perun_api_proto_rawDescGZIP() []byte {
 }
 
 var file_grpc_Perun_api_proto_msgTypes = make([]protoimpl.MessageInfo, 15)
-var file_grpc_Perun_api_proto_goTypes = []any{
+var file_grpc_Perun_api_proto_goTypes = []interface{}{
 	(*Version)(nil),               // 0: perun_api.Version
 	(*Node)(nil),                  // 1: perun_api.Node
 	(*Ssh)(nil),                   // 2: perun_api.Ssh
@@ -889,7 +889,7 @@ func file_grpc_Perun_api_proto_init() {
 		return
 	}
 	if !protoimpl.UnsafeEnabled {
-		file_grpc_Perun_api_proto_msgTypes[0].Exporter = func(v any, i int) any {
+		file_grpc_Perun_api_proto_msgTypes[0].Exporter = func(v interface{}, i int) interface{} {
 			switch v := v.(*Version); i {
 			case 0:
 				return &v.state
@@ -901,7 +901,7 @@ func file_grpc_Perun_api_proto_init() {
 				return nil
 			}
 		}
-		file_grpc_Perun_api_proto_msgTypes[1].Exporter = func(v any, i int) any {
+		file_grpc_Perun_api_proto_msgTypes[1].Exporter = func(v interface{}, i int) interface{} {
 			switch v := v.(*Node); i {
 			case 0:
 				return &v.state
@@ -913,7 +913,7 @@ func file_grpc_Perun_api_proto_init() {
 				return nil
 			}
 		}
-		file_grpc_Perun_api_proto_msgTypes[2].Exporter = func(v any, i int) any {
+		file_grpc_Perun_api_proto_msgTypes[2].Exporter = func(v interface{}, i int) interface{} {
 			switch v := v.(*Ssh); i {
 			case 0:
 				return &v.state
@@ -925,7 +925,7 @@ func file_grpc_Perun_api_proto_init() {
 				return nil
 			}
 		}
-		file_grpc_Perun_api_proto_msgTypes[3].Exporter = func(v any, i int) any {
+		file_grpc_Perun_api_proto_msgTypes[3].Exporter = func(v interface{}, i int) interface{} {
 			switch v := v.(*ConnectVelez); i {
 			case 0:
 				return &v.state
@@ -937,7 +937,7 @@ func file_grpc_Perun_api_proto_init() {
 				return nil
 			}
 		}
-		file_grpc_Perun_api_proto_msgTypes[4].Exporter = func(v any, i int) any {
+		file_grpc_Perun_api_proto_msgTypes[4].Exporter = func(v interface{}, i int) interface{} {
 			switch v := v.(*ListPaging); i {
 			case 0:
 				return &v.state
@@ -949,7 +949,7 @@ func file_grpc_Perun_api_proto_init() {
 				return nil
 			}
 		}
-		file_grpc_Perun_api_proto_msgTypes[5].Exporter = func(v any, i int) any {
+		file_grpc_Perun_api_proto_msgTypes[5].Exporter = func(v interface{}, i int) interface{} {
 			switch v := v.(*ListNodes); i {
 			case 0:
 				return &v.state
@@ -961,7 +961,7 @@ func file_grpc_Perun_api_proto_init() {
 				return nil
 			}
 		}
-		file_grpc_Perun_api_proto_msgTypes[6].Exporter = func(v any, i int) any {
+		file_grpc_Perun_api_proto_msgTypes[6].Exporter = func(v interface{}, i int) interface{} {
 			switch v := v.(*RunService); i {
 			case 0:
 				return &v.state
@@ -973,7 +973,7 @@ func file_grpc_Perun_api_proto_init() {
 				return nil
 			}
 		}
-		file_grpc_Perun_api_proto_msgTypes[7].Exporter = func(v any, i int) any {
+		file_grpc_Perun_api_proto_msgTypes[7].Exporter = func(v interface{}, i int) interface{} {
 			switch v := v.(*Version_Request); i {
 			case 0:
 				return &v.state
@@ -985,7 +985,7 @@ func file_grpc_Perun_api_proto_init() {
 				return nil
 			}
 		}
-		file_grpc_Perun_api_proto_msgTypes[8].Exporter = func(v any, i int) any {
+		file_grpc_Perun_api_proto_msgTypes[8].Exporter = func(v interface{}, i int) interface{} {
 			switch v := v.(*Version_Response); i {
 			case 0:
 				return &v.state
@@ -997,7 +997,7 @@ func file_grpc_Perun_api_proto_init() {
 				return nil
 			}
 		}
-		file_grpc_Perun_api_proto_msgTypes[9].Exporter = func(v any, i int) any {
+		file_grpc_Perun_api_proto_msgTypes[9].Exporter = func(v interface{}, i int) interface{} {
 			switch v := v.(*ConnectVelez_Request); i {
 			case 0:
 				return &v.state
@@ -1009,7 +1009,7 @@ func file_grpc_Perun_api_proto_init() {
 				return nil
 			}
 		}
-		file_grpc_Perun_api_proto_msgTypes[10].Exporter = func(v any, i int) any {
+		file_grpc_Perun_api_proto_msgTypes[10].Exporter = func(v interface{}, i int) interface{} {
 			switch v := v.(*ConnectVelez_Response); i {
 			case 0:
 				return &v.state
@@ -1021,7 +1021,7 @@ func file_grpc_Perun_api_proto_init() {
 				return nil
 			}
 		}
-		file_grpc_Perun_api_proto_msgTypes[11].Exporter = func(v any, i int) any {
+		file_grpc_Perun_api_proto_msgTypes[11].Exporter = func(v interface{}, i int) interface{} {
 			switch v := v.(*ListNodes_Request); i {
 			case 0:
 				return &v.state
@@ -1033,7 +1033,7 @@ func file_grpc_Perun_api_proto_init() {
 				return nil
 			}
 		}
-		file_grpc_Perun_api_proto_msgTypes[12].Exporter = func(v any, i int) any {
+		file_grpc_Perun_api_proto_msgTypes[12].Exporter = func(v interface{}, i int) interface{} {
 			switch v := v.(*ListNodes_Response); i {
 			case 0:
 				return &v.state
@@ -1045,7 +1045,7 @@ func file_grpc_Perun_api_proto_init() {
 				return nil
 			}
 		}
-		file_grpc_Perun_api_proto_msgTypes[13].Exporter = func(v any, i int) any {
+		file_grpc_Perun_api_proto_msgTypes[13].Exporter = func(v interface{}, i int) interface{} {
 			switch v := v.(*RunService_Request); i {
 			case 0:
 				return &v.state
@@ -1057,7 +1057,7 @@ func file_grpc_Perun_api_proto_init() {
 				return nil
 			}
 		}
-		file_grpc_Perun_api_proto_msgTypes[14].Exporter = func(v any, i int) any {
+		file_grpc_Perun_api_proto_msgTypes[14].Exporter = func(v interface{}, i int) interface{} {
 			switch v := v.(*RunService_Response); i {
 			case 0:
 				return &v.state
@@ -1070,8 +1070,8 @@ func file_grpc_Perun_api_proto_init() {
 			}
 		}
 	}
-	file_grpc_Perun_api_proto_msgTypes[1].OneofWrappers = []any{}
-	file_grpc_Perun_api_proto_msgTypes[11].OneofWrappers = []any{}
+	file_grpc_Perun_api_proto_msgTypes[1].OneofWrappers = []interface{}{}
+	file_grpc_Perun_api_proto_msgTypes[11].OneofWrappers = []interface{}{}
 	type x struct{}
 	out := protoimpl.TypeBuilder{
 		File: protoimpl.DescBuilder{
